z-index issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -139,6 +139,7 @@ header {
 
 		body.ready & {
 			opacity:0;
+			z-index:-1;
 		}
 
 
